[fix] Fix FfmMemoryAccessor ByteBuffer address and documentation gaps
- getByteBufferAddress was position-dependent, causing double-offset
  reads/writes wherever ArrowBuf adds position() on top (silent
  off-heap memory corruption for positioned direct buffers)
- Warn instead of silently falling back to Unsafe on an unrecognized
  arrow.memory.accessor.type value
- Isolate the add-opens-independence test with an actual argLine
  override, so it proves what its name claims
- Document the real --enable-native-access requirement and
  freeMemory's no-op-on-foreign-address behavior