@@ -28,11 +28,28 @@ import org.apache.arrow.memory.util.MemoryUtilAccessor;
  * Arena}). Does not use {@code sun.misc.Unsafe} or reflection into {@code java.nio} internals, so
  * it requires neither {@code --add-opens} nor {@code sun.misc.Unsafe} availability.
  *
+ * <p><b>Required JVM flag.</b> This accessor calls the restricted method {@link
+ * MemorySegment#reinterpret(long)}. That is a real, current requirement, not a caveat that this
+ * module already handles for you: classpath (unnamed-module) consumers must pass {@code
+ * --enable-native-access=ALL-UNNAMED} and module-path consumers must pass {@code
+ * --enable-native-access=org.apache.arrow.memory.ffm} on the JVM command line. Without it the JVM
+ * prints a warning on every restricted call today, and a future JDK that enables restricted-method
+ * enforcement by default will turn that into a hard {@link IllegalCallerException}. The {@code
+ * Enable-Native-Access: ALL-UNNAMED} entry in this module's jar manifest does <em>not</em> cover
+ * this: the JVM only honours that attribute in the manifest of the jar it was launched with via
+ * {@code java -jar}, never for a jar that is merely a classpath dependency.
+ *
  * <p>{@link #allocateMemory}/{@link #freeMemory} are provided for standalone callers of {@link
  * org.apache.arrow.memory.util.MemoryUtil#allocateMemory}/{@code #freeMemory}; each call gets its
  * own {@link Arena}, tracked by address so {@link #freeMemory} can close the right one.
  * Allocation-manager-owned memory instead goes through {@link FfmAllocationManager}, which holds
  * its {@link Arena} directly rather than round-tripping through this map.
+ *
+ * <p><b>Note.</b> Because freeing is arena-based rather than address-based, {@link #freeMemory} can
+ * only release addresses that came from this accessor's own {@link #allocateMemory}. An address
+ * from any other source (JNI, a foreign {@code malloc}, another accessor) is a silent no-op. This
+ * differs from the {@code sun.misc.Unsafe}-backed accessor, which frees any valid native address
+ * unconditionally.
  */
 public final class FfmMemoryAccessor implements MemoryUtilAccessor {
 
@@ -53,6 +70,10 @@ public final class FfmMemoryAccessor implements MemoryUtilAccessor {
     return (int) value;
   }
 
+  /**
+   * Allocates {@code bytes} of native memory in a dedicated shared {@link Arena}, kept alive until
+   * {@link #freeMemory} is called with the returned address.
+   */
   @Override
   public long allocateMemory(long bytes) {
     Arena arena = Arena.ofShared();
@@ -61,6 +82,15 @@ public final class FfmMemoryAccessor implements MemoryUtilAccessor {
     return address;
   }
 
+  /**
+   * Frees memory previously returned by {@link #allocateMemory}.
+   *
+   * @implNote Only addresses obtained from this accessor's {@link #allocateMemory} are actually
+   *     freed; the address is looked up in a map of owning arenas. An address from any other source
+   *     (JNI, a foreign {@code malloc}, another accessor) is not tracked here and the call is a
+   *     silent no-op. The {@code sun.misc.Unsafe}-backed accessor instead frees any valid native
+   *     address unconditionally.
+   */
   @Override
   public void freeMemory(long address) {
     Arena arena = STANDALONE_ARENAS.remove(address);
@@ -151,9 +181,21 @@ public final class FfmMemoryAccessor implements MemoryUtilAccessor {
     return MemorySegment.ofArray(bytes).get(ValueLayout.JAVA_LONG_UNALIGNED, index);
   }
 
+  /**
+   * Returns the address of byte 0 of {@code buf}'s backing memory, independent of {@code buf}'s
+   * current position.
+   *
+   * @implNote {@code MemorySegment.ofBuffer(buf)} only spans {@code [position, limit)}, so its
+   *     address shifts with the position. Callers (notably {@link
+   *     org.apache.arrow.memory.ArrowBuf}) add {@code position()} or an explicit index on top of
+   *     the returned address themselves, matching the {@code sun.misc.Unsafe}-backed accessor,
+   *     which reads the raw {@code java.nio.Buffer.address} field. Clearing a duplicate (rather
+   *     than {@code buf} itself, whose state must not change) resets position to 0 and limit to
+   *     capacity so the segment spans the whole backing buffer from byte 0.
+   */
   @Override
   public long getByteBufferAddress(ByteBuffer buf) {
-    return MemorySegment.ofBuffer(buf).address();
+    return MemorySegment.ofBuffer(buf.duplicate().clear()).address();
   }
 
   @Override
